turmites.lessons.turmites.helloturmite.HelloTurmite.scala.error
Turmite:31: error: Int does not take parameters
    case gauche => gauche()
                         ^Turmite:33: error: Int does not take parameters
    case droite => droite()
                         ^